--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,11 @@ cmake_minimum_required(VERSION 3.15)
 
 project(opengl-test LANGUAGES CXX C)
 
-file(GLOB source include/*.h src/*.cpp)
-file(GLOB glad /home/ryan/Documents/third_parties/glad.c)
+file(GLOB source include/*.h src/*.cpp src/*.c)
 
 find_package(Freetype REQUIRED)
 
-add_executable(run_it ${source} ${glad})
+add_executable(run_it ${source})
 
 target_include_directories(run_it PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
